# betris

./: Cargo.toml  log.md
src/: dev_tools.rs  game.rs  lib.rs  main.rs  pieces.rs  pos.rs  splash.rs
src/game/: debug.rs  input.rs  matrix.rs  mod.rs  score.rs  timers.rs  ui.rs
src/game/spawners/: matrix.rs  mod.rs  next_piece_zone.rs  next_zone.rs  piece.rs
src/model/: data.rs  mod.rs  pos.rs  tetrimino.rs
src/screen/: gameplay.rs  mod.rs  playing.rs  splash.rs
