[package]
name = "betris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
num_enum = "0.7"
rand = "0.8"
strum = { version = "0.26", features = ["derive"] }
